# Ped-Agent

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: .env.example  analysis.yaml  default.yaml  langsmith.yaml  llm.yaml  rag.yaml  vision.yaml
docs/: config-system-design.md  data-analysis-module-design.md  development-plan.md  experiment-evaluation-module-design.md  rag-architecture.md  versioning.md  vision-module-design.md
scripts/: evaluate_agent.py  index_papers.py  run_vision.py
src/ped_agent/: __init__.py  __main__.py  main.py
src/ped_agent/agent/: __init__.py  graph.py  nodes.py  state.py  tools.py
src/ped_agent/analysis/: __init__.py  fundamental_diagram.py  metrics.py  od_matrix.py  pipeline.py  schemas.py  statistics.py  visualizer.py
src/ped_agent/evals/: __init__.py  datasets.py  evaluators.py  experiments.py
src/ped_agent/experiment/: __init__.py  consistency.py  criteria.py  evaluator.py  report.py  schemas.py
src/ped_agent/knowledge/: __init__.py  embeddings.py  graph_store.py  indexer.py  query_transform.py  reranker.py  retriever.py  vector_store.py
src/ped_agent/llm/: __init__.py  callbacks.py  factory.py
src/ped_agent/models/: __init__.py  literature.py  scenario_data.py  trajectory.py
src/ped_agent/utils/: config.py  langsmith.py  logging.py
src/ped_agent/vision/: __init__.py  detector.py  interface.py  pipeline.py  postprocess.py  registry.py  schemas.py  tracker.py  (+1 more)
tests/unit/: test_agent_routing.py  test_analysis.py  test_config.py  test_experiment.py  test_langsmith.py  test_llm_factory.py  test_models.py
(+16 files in other folders)
