[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ped-agent"
version = "0.1.0"
description = "Agentic question-answering and analysis toolkit for pedestrian-flow research."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ped-Agent contributors" }]
dependencies = [
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.12",
  "plotly>=5.20",
  "matplotlib>=3.8",
  "python-dotenv>=1.0",
  "omegaconf>=2.3",
  "langgraph>=1.0",
  "langchain>=1.0",
  "langchain-core>=1.0",
  "langchain-openai>=1.0",
  "langchain-anthropic>=1.0",
]

[project.optional-dependencies]
rag = [
  "chromadb>=0.5",
  "langchain-chroma>=0.1",
  "langchain-huggingface>=0.1",
  "FlagEmbedding>=1.2",
  "arxiv>=2.1",
]
vision = [
  "ultralytics>=8.2",
  "boxmot>=10.0",
  "opencv-python>=4.8",
  "lap>=0.4",
]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.scripts]
ped-agent = "ped_agent.main:main"

[project.entry-points."ped_agent.vision"]
yolo26_bytetrack = "ped_agent.vision.plugins.yolo26_bytetrack:YOLO26ByteTrackBackend"
yolo26_deepsort = "ped_agent.vision.plugins.yolo26_deepsort:YOLO26DeepSORTBackend"

[tool.hatch.build.targets.wheel]
packages = ["src/ped_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
packages = ["ped_agent"]
ignore_missing_imports = true
strict = false
